ACCUMULO-4490 Simplify Accumulo scripts and config
* Created accumulo-service & accumulo-cluster commands
* Updated accumulo command and improved usage
* Native libraries are not built using 'accumulo native'
* Accumulo config is now created using 'accumulo config'
* The release only contains one set of example config in 'conf/examples'
* Updated INSTALL.md to reflect script and config changes
* Accumulo falls back to conf/examples when configuring logging
* Combined several cluster-related scripts into cluster.sh
* Combined service/daemon related scripts in service.sh
* Deleted config scripts and created load-env.sh
* Moved build-native-library code from script to accumulo command
* Reduced number of directories in tarball by placing scripts in lib
  and examples, test, and proxy into new opt directory
* Removed references to ACCUMULO_HOME to ease downstream packaging
* Updated script references in documentation
* Removed unnecessary classpath settings in core/src/test files
* Removed accumulo-site.xml in core/src/test that is not being used

--- a/docs/src/main/resources/examples/README
+++ b/docs/src/main/resources/examples/README
@@ -18,7 +18,7 @@ Notice:    Licensed to the Apache Software Foundation (ASF) under one
 
 Before running any of the examples, the following steps must be performed.
 
-1. Install and run Accumulo via the instructions found in $ACCUMULO_HOME/README.
+1. Install and run Accumulo via the instructions found in INSTALL.md.
    Remember the instance name. It will be referred to as "instance" throughout
    the examples. A comma-separated list of zookeeper servers will be referred
    to as "zookeepers".
@@ -31,7 +31,7 @@ In all commands, you will need to replace "instance", "zookeepers",
 "username", and "password" with the values you set for your Accumulo instance.
 
 Commands intended to be run in bash are prefixed by '$'. These are always
-assumed to be run from the $ACCUMULO_HOME directory.
+assumed to be run the from the root of your Accumulo installation.
 
 Commands intended to be run in the Accumulo shell are prefixed by '>'.
 
